[package]
name = "duden-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
paste = "1.0.12"
reqwest = { version = "0.11.18", features = ["blocking"] }
scraper = { version = "0.16.0", features = ["atomic"] }
